# d7dev

./: .gitignore  .gitmodules  CLAUDE.md  README.md  analytical-orchestration-framework.md  pyproject.toml
.claude/: settings.json
.claude/agents/: analyst.md  architect.md  data-engineer.md  kb-curator.md  lookml-developer.md  modeler.md  warehouse-calibrator.md
.claude/commands/: analyze.md  calibrate.md  checkpoint.md  etl.md  evolve.md  ingest.md  kb-update.md  lookml.md  model.md  monitor.md  orient.md  preflight.md  review.md  roadmap.md  scaffold.md  sql.md  status.md  test.md
.claude/hooks/: _lib.sh  bash-guard.sh  checkpoint.md  claude_hooks_walkthrough.md  health-check.sh  prompt-context.sh  retry-guard.sh  session-closeout.sh  session-gate.sh  stop-check-staging.sh  test-all.sh  workflow-tracker.sh  writing-scrub.sh
.claude/rules/: analysis-methodology.md  dbt-standards.md  deliverable-standards.md  git-workflow.md  guardrails.md  lookml-standards.md  python-standards.md  roadmapping-methodology.md  snowflake-mcp.md  sql-snowflake.md  writing-standards.md
.claude/telemetry/: CLAUDE.md  com.d7dev.otelcol.plist.template  otelcol-config.yaml
analysis/: CLAUDE.md
context/: CLAUDE.md  dbt-manifest.md
docs/: CLAUDE.md  d7dev-walkthrough.md
etl/: CLAUDE.md
evolution/: CLAUDE.md  GAP_ANALYSIS.md  MASTER_TRACKER.md  README.md  checkpoint.md
initiatives/: CLAUDE.md  lifecycle-notifications.md
knowledge/: CLAUDE.md
lookml/: CLAUDE.md
scripts/: CLAUDE.md  audit_command_permissions.py
tests/: CLAUDE.md  test_audit_command_permissions.py
(+973 files in other folders)
